--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "liverpool-tracker",
   "version": "0.1.0",
+  "proxy": "https://api.football-data.org",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
