--- a/public/manifest.json
+++ b/public/manifest.json
@@ -8,12 +8,12 @@
       "type": "image/x-icon"
     },
     {
-      "src": "liverpool.ico",
+      "src": "liverpool.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "liverpool.ico",
+      "src": "liverpool.png",
       "type": "image/png",
       "sizes": "512x512"
     }
