--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,13 +9,11 @@
     },
     {
       "src": "liverpool.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "type": "image/png"
     },
     {
       "src": "liverpool.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "type": "image/png"
     }
   ],
   "start_url": ".",
